--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/style.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/style.less
@@ -1482,9 +1482,6 @@
 
 .navigation {
   background   : none repeat scroll 0 0 @white-color;
-  border-color : @gray-light;
-  border-style : solid;
-  border-width : 1px 0 1px;
   display      : block;
   height       : 60px;
   margin       : 20px auto 20px;
@@ -1507,8 +1504,8 @@
     width            : 60px;
     a {
       &:extend(.navigation  li);
-      border-right  : 1px solid @gray-light;
-      border-bottom : 1px solid @gray-light;
+      border-right  : 1px solid @gray-lighter;
+      border-bottom : 1px solid @gray-lighter;
     }
     a:hover {
       background : none repeat scroll 0 0 #f2f2f2;
