--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/comment.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/comment.less
@@ -141,8 +141,8 @@
           }
         }
         input[type='text'] {
-          background-color : lighten(@brand-primary,48%);
-          border           : 1px solid lighten(@brand-primary,30%);
+          background-color : lighten(@brand-primary, 48%);
+          border           : 1px solid lighten(@brand-primary, 30%);
           outline          : medium none;
           padding          : 0 20px;
           vertical-align   : middle;
@@ -177,8 +177,8 @@
       width          : 100%;
     }
     textarea {
-      background-color : lighten(@brand-primary,48%);
-      border           : 1px solid lighten(@brand-primary,30%);
+      background-color : lighten(@brand-primary, 48%);
+      border           : 1px solid lighten(@brand-primary, 30%);
       outline          : medium none;
     }
     #submit {
@@ -204,4 +204,26 @@
   }
 }
 
+.butterBar {
+  margin-left : 36%;
+  max-width   : 640px;
+  position    : fixed;
+  text-align  : center;
+  top         : 50%;
+  width       : 58%;
+  z-index     : 800
+}
 
+.butterBar--center {
+  left        : 50%;
+  margin-left : -320px
+}
+
+.butterBar-message {
+  background    : @white-color;
+  border        : 1px solid @gray-light;
+  display       : inline-block;
+  font-size     : @f-normal-size;
+  margin-bottom : 0;
+  padding       : 12px 25px
+}
