--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/icons.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/icons.less
@@ -5,147 +5,31 @@
   src         : local("Dosis ExtraLight"), local("Dosis-ExtraLight"), url("http://themes.googleusercontent.com/static/fonts/dosis/v1/zuuDDmIlQfJeEM3Uf6kkpvesZW2xOQ-xsNqO47m55DA.woff") format("woff");
 }
 
-/* cyrillic-ext */
 @font-face {
-  font-family   : 'Roboto';
-  font-style    : normal;
-  font-weight   : 400;
-  src           : local('Roboto'), local('Roboto-Regular'), url(http://fonts.gstatic.com/s/roboto/v15/sTdaA6j0Psb920Vjv-mrzH-_kf6ByYO6CLYdB4HQE-Y.woff2) format('woff2');
-  unicode-range : U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Roboto'), local('Roboto-Regular'), url(http://fonts.gstatic.com/s/roboto/v15/oMMgfZMQthOryQo9n22dcuvvDin1pK8aKteLpeZ5c0A.woff2) format('woff2'), url(http://fonts.gstatic.com/s/roboto/v15/CrYjSnGjrRCn0pd9VQsnFOvvDin1pK8aKteLpeZ5c0A.woff) format('woff');
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  src: local('Roboto Medium'), local('Roboto-Medium'), url(http://fonts.gstatic.com/s/roboto/v15/RxZJdnzeo3R5zSexge8UUZBw1xU1rKptJj_0jans920.woff2) format('woff2'), url(http://fonts.gstatic.com/s/roboto/v15/RxZJdnzeo3R5zSexge8UUbO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Roboto Italic'), local('Roboto-Italic'), url(http://fonts.gstatic.com/s/roboto/v15/vPcynSL0qHq_6dX7lKVByXYhjbSpvc47ee6xR_80Hnw.woff2) format('woff2'), url(http://fonts.gstatic.com/s/roboto/v15/1pO9eUAp8pSF8VnRTP3xnnYhjbSpvc47ee6xR_80Hnw.woff) format('woff');
 }
 
-/* cyrillic */
-@font-face {
-  font-family   : 'Roboto';
-  font-style    : normal;
-  font-weight   : 400;
-  src           : local('Roboto'), local('Roboto-Regular'), url(http://fonts.gstatic.com/s/roboto/v15/uYECMKoHcO9x1wdmbyHIm3-_kf6ByYO6CLYdB4HQE-Y.woff2) format('woff2');
-  unicode-range : U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-}
-
-/* greek-ext */
-@font-face {
-  font-family   : 'Roboto';
-  font-style    : normal;
-  font-weight   : 400;
-  src           : local('Roboto'), local('Roboto-Regular'), url(http://fonts.gstatic.com/s/roboto/v15/tnj4SB6DNbdaQnsM8CFqBX-_kf6ByYO6CLYdB4HQE-Y.woff2) format('woff2');
-  unicode-range : U+1F00-1FFF;
-}
-
-/* greek */
-@font-face {
-  font-family   : 'Roboto';
-  font-style    : normal;
-  font-weight   : 400;
-  src           : local('Roboto'), local('Roboto-Regular'), url(http://fonts.gstatic.com/s/roboto/v15/_VYFx-s824kXq_Ul2BHqYH-_kf6ByYO6CLYdB4HQE-Y.woff2) format('woff2');
-  unicode-range : U+0370-03FF;
-}
-
-/* vietnamese */
-@font-face {
-  font-family   : 'Roboto';
-  font-style    : normal;
-  font-weight   : 400;
-  src           : local('Roboto'), local('Roboto-Regular'), url(http://fonts.gstatic.com/s/roboto/v15/NJ4vxlgWwWbEsv18dAhqnn-_kf6ByYO6CLYdB4HQE-Y.woff2) format('woff2');
-  unicode-range : U+0102-0103, U+1EA0-1EF1, U+20AB;
-}
-
-/* latin-ext */
-@font-face {
-  font-family   : 'Roboto';
-  font-style    : normal;
-  font-weight   : 400;
-  src           : local('Roboto'), local('Roboto-Regular'), url(http://fonts.gstatic.com/s/roboto/v15/Ks_cVxiCiwUWVsFWFA3Bjn-_kf6ByYO6CLYdB4HQE-Y.woff2) format('woff2');
-  unicode-range : U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-
-/* latin */
-@font-face {
-  font-family   : 'Roboto';
-  font-style    : normal;
-  font-weight   : 400;
-  src           : local('Roboto'), local('Roboto-Regular'), url(http://fonts.gstatic.com/s/roboto/v15/oMMgfZMQthOryQo9n22dcuvvDin1pK8aKteLpeZ5c0A.woff2) format('woff2');
-  unicode-range : U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-
-/* cyrillic-ext */
-@font-face {
-  font-family   : 'Roboto';
-  font-style    : italic;
-  font-weight   : 400;
-  src           : local('Roboto Italic'), local('Roboto-Italic'), url(http://fonts.gstatic.com/s/roboto/v15/WxrXJa0C3KdtC7lMafG4dRkAz4rYn47Zy2rvigWQf6w.woff2) format('woff2');
-  unicode-range : U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
-}
-
-/* cyrillic */
-@font-face {
-  font-family   : 'Roboto';
-  font-style    : italic;
-  font-weight   : 400;
-  src           : local('Roboto Italic'), local('Roboto-Italic'), url(http://fonts.gstatic.com/s/roboto/v15/OpXUqTo0UgQQhGj_SFdLWBkAz4rYn47Zy2rvigWQf6w.woff2) format('woff2');
-  unicode-range : U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-}
-
-/* greek-ext */
-@font-face {
-  font-family   : 'Roboto';
-  font-style    : italic;
-  font-weight   : 400;
-  src           : local('Roboto Italic'), local('Roboto-Italic'), url(http://fonts.gstatic.com/s/roboto/v15/1hZf02POANh32k2VkgEoUBkAz4rYn47Zy2rvigWQf6w.woff2) format('woff2');
-  unicode-range : U+1F00-1FFF;
-}
-
-/* greek */
-@font-face {
-  font-family   : 'Roboto';
-  font-style    : italic;
-  font-weight   : 400;
-  src           : local('Roboto Italic'), local('Roboto-Italic'), url(http://fonts.gstatic.com/s/roboto/v15/cDKhRaXnQTOVbaoxwdOr9xkAz4rYn47Zy2rvigWQf6w.woff2) format('woff2');
-  unicode-range : U+0370-03FF;
-}
-
-/* vietnamese */
-@font-face {
-  font-family   : 'Roboto';
-  font-style    : italic;
-  font-weight   : 400;
-  src           : local('Roboto Italic'), local('Roboto-Italic'), url(http://fonts.gstatic.com/s/roboto/v15/K23cxWVTrIFD6DJsEVi07RkAz4rYn47Zy2rvigWQf6w.woff2) format('woff2');
-  unicode-range : U+0102-0103, U+1EA0-1EF1, U+20AB;
-}
-
-/* latin-ext */
-@font-face {
-  font-family   : 'Roboto';
-  font-style    : italic;
-  font-weight   : 400;
-  src           : local('Roboto Italic'), local('Roboto-Italic'), url(http://fonts.gstatic.com/s/roboto/v15/vSzulfKSK0LLjjfeaxcREhkAz4rYn47Zy2rvigWQf6w.woff2) format('woff2');
-  unicode-range : U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-
-/* latin */
-@font-face {
-  font-family   : 'Roboto';
-  font-style    : italic;
-  font-weight   : 400;
-  src           : local('Roboto Italic'), local('Roboto-Italic'), url(http://fonts.gstatic.com/s/roboto/v15/vPcynSL0qHq_6dX7lKVByXYhjbSpvc47ee6xR_80Hnw.woff2) format('woff2');
-  unicode-range : U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
 
 @font-face {
-  font-family   : 'Clicker Script';
-  font-style    : normal;
-  font-weight   : 400;
-  src           : local('Clicker Script'), local('ClickerScript-Regular'), url(http://fonts.gstatic.com/s/clickerscript/v4/Zupmk8XwADjufGxWB9KThJsabQn3CiWJQhcyqO-X-wo.woff2) format('woff2');
-  unicode-range : U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-
-/* latin */
-@font-face {
-  font-family   : 'Clicker Script';
-  font-style    : normal;
-  font-weight   : 400;
-  src           : local('Clicker Script'), local('ClickerScript-Regular'), url(http://fonts.gstatic.com/s/clickerscript/v4/Zupmk8XwADjufGxWB9KThJsM3FTMmj2kTPH3yX99Yaw.woff2) format('woff2');
-  unicode-range : U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+  font-family: 'Clicker Script';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Clicker Script'), local('ClickerScript-Regular'), url(http://fonts.gstatic.com/s/clickerscript/v4/Zupmk8XwADjufGxWB9KThJsM3FTMmj2kTPH3yX99Yaw.woff2) format('woff2'), url(http://fonts.gstatic.com/s/clickerscript/v4/Zupmk8XwADjufGxWB9KThLDH3ri20rYH10B2w3wbVeU.woff) format('woff');
 }
 
 @font-face {
