--- a/wp-content/themes/Lilim-Theme-Wordpress/css/styles.css
+++ b/wp-content/themes/Lilim-Theme-Wordpress/css/styles.css
@@ -1739,7 +1739,7 @@ a.share-button {
   position: relative;
 }
 #menu-mobile .wrapper-menu ul li a::before {
-  left: 30px;
+  left: 50px;
   position: absolute;
   top: 0;
   clip: rect(0, 0, 100px, 0);
@@ -1750,9 +1750,11 @@ a.share-button {
   width: 100%;
   -webkit-transition: clip 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
   transition: clip 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  z-index: 999;
 }
 #menu-mobile .wrapper-menu ul li a span {
-  padding-left: 5px;
+  position: absolute;
+  left: 50px;
 }
 #menu-mobile .search-text {
   display: block;
