fixed some minor sytyle bug

--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/content.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/content.less
@@ -329,12 +329,12 @@
         .tag {
           ul {
             font-size  : @f-small-size;
-            margin     : 38px 0 0 0;
+            margin     : 45px 0 0 0;
             list-style : none outside none;
             position   : absolute;
             right      : 0;
             top        : 0;
-            .transition(all 0.25 ease);
+            .transition(all .25s ease);
             &.show {
               z-index : 12;
               li {
