added music and its styles

--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/icons.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/icons.less
@@ -6,30 +6,31 @@
 }
 
 @font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Roboto'), local('Roboto-Regular'), url(http://fonts.gstatic.com/s/roboto/v15/oMMgfZMQthOryQo9n22dcuvvDin1pK8aKteLpeZ5c0A.woff2) format('woff2'), url(http://fonts.gstatic.com/s/roboto/v15/CrYjSnGjrRCn0pd9VQsnFOvvDin1pK8aKteLpeZ5c0A.woff) format('woff');
-}
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  src: local('Roboto Medium'), local('Roboto-Medium'), url(http://fonts.gstatic.com/s/roboto/v15/RxZJdnzeo3R5zSexge8UUZBw1xU1rKptJj_0jans920.woff2) format('woff2'), url(http://fonts.gstatic.com/s/roboto/v15/RxZJdnzeo3R5zSexge8UUbO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
-}
-@font-face {
-  font-family: 'Roboto';
-  font-style: italic;
-  font-weight: 400;
-  src: local('Roboto Italic'), local('Roboto-Italic'), url(http://fonts.gstatic.com/s/roboto/v15/vPcynSL0qHq_6dX7lKVByXYhjbSpvc47ee6xR_80Hnw.woff2) format('woff2'), url(http://fonts.gstatic.com/s/roboto/v15/1pO9eUAp8pSF8VnRTP3xnnYhjbSpvc47ee6xR_80Hnw.woff) format('woff');
+  font-family : 'Roboto';
+  font-style  : normal;
+  font-weight : 400;
+  src         : local('Roboto'), local('Roboto-Regular'), url(http://fonts.gstatic.com/s/roboto/v15/oMMgfZMQthOryQo9n22dcuvvDin1pK8aKteLpeZ5c0A.woff2) format('woff2'), url(http://fonts.gstatic.com/s/roboto/v15/CrYjSnGjrRCn0pd9VQsnFOvvDin1pK8aKteLpeZ5c0A.woff) format('woff');
 }
 
+@font-face {
+  font-family : 'Roboto';
+  font-style  : normal;
+  font-weight : 500;
+  src         : local('Roboto Medium'), local('Roboto-Medium'), url(http://fonts.gstatic.com/s/roboto/v15/RxZJdnzeo3R5zSexge8UUZBw1xU1rKptJj_0jans920.woff2) format('woff2'), url(http://fonts.gstatic.com/s/roboto/v15/RxZJdnzeo3R5zSexge8UUbO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
+}
 
 @font-face {
-  font-family: 'Clicker Script';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Clicker Script'), local('ClickerScript-Regular'), url(http://fonts.gstatic.com/s/clickerscript/v4/Zupmk8XwADjufGxWB9KThJsM3FTMmj2kTPH3yX99Yaw.woff2) format('woff2'), url(http://fonts.gstatic.com/s/clickerscript/v4/Zupmk8XwADjufGxWB9KThLDH3ri20rYH10B2w3wbVeU.woff) format('woff');
+  font-family : 'Roboto';
+  font-style  : italic;
+  font-weight : 400;
+  src         : local('Roboto Italic'), local('Roboto-Italic'), url(http://fonts.gstatic.com/s/roboto/v15/vPcynSL0qHq_6dX7lKVByXYhjbSpvc47ee6xR_80Hnw.woff2) format('woff2'), url(http://fonts.gstatic.com/s/roboto/v15/1pO9eUAp8pSF8VnRTP3xnnYhjbSpvc47ee6xR_80Hnw.woff) format('woff');
+}
+
+@font-face {
+  font-family : 'Clicker Script';
+  font-style  : normal;
+  font-weight : 400;
+  src         : local('Clicker Script'), local('ClickerScript-Regular'), url(http://fonts.gstatic.com/s/clickerscript/v4/Zupmk8XwADjufGxWB9KThJsM3FTMmj2kTPH3yX99Yaw.woff2) format('woff2'), url(http://fonts.gstatic.com/s/clickerscript/v4/Zupmk8XwADjufGxWB9KThLDH3ri20rYH10B2w3wbVeU.woff) format('woff');
 }
 
 @font-face {
@@ -41,6 +42,12 @@
   url('../fonts/icomoon.svg?-g2qgrj#icomoon') format('svg');
   font-weight : normal;
   font-style  : normal;
+}
+
+@font-face {
+  font-family : "fx";
+  src         : url('../fonts/neteasemusic.eot');
+  src         : url('../fonts/neteasemusic.eot?#iefix') format('embedded-opentype'), url('../fonts/neteasemusic.woff') format('woff'), url('../fonts/neteasemusic.ttf') format('truetype'), url('../fonts/neteasemusic.svg#fx') format('svg')
 }
 
 [class^="icon-"], [class*=" icon-"] {
