--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
@@ -23,4 +23,5 @@ License: CC BY-NC-SA 4.0
 @import "heading.less";
 @import "content.less";
 @import "comment.less";
+@import "music.less";
 @import "style.less";
