--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
@@ -11,16 +11,22 @@ License: CC BY-NC-SA 4.0
 //////////////////// Setup ////////////////////
 //
 @import "reset/normalize.less";
-@import "variables.less";
 @import "mixins.less";
-@import "icons.less";
-@import "setup.less";
+@import "scaffold.less";
+
+//////////////////// Component ////////////////////
+//
+@import "component/variables.less";
+@import "component/icons.less";
+@import "component/ribbon.less";
 
 //////////////////// Start ////////////////////
 //
+@import "module/header.less";
+@import "module/footer.less";
+@import "module/menu.less";
 @import "keyframes.less";
 @import "share.less";
-@import "heading.less";
 @import "content.less";
 @import "comment.less";
 @import "music.less";
