--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/scaffold.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/scaffold.less
@@ -16,7 +16,7 @@
 }
 
 svg {
-  display :none;
+  display : none;
 }
 
 .cb {
@@ -75,28 +75,26 @@ a {
 }
 
 blockquote {
-  background  : #f9f9f9;
-  border-left : 10px solid #ccc;
-  margin      : 1.5em 10px;
-  padding     : .5em 10px;
-  quotes      : "\201C" "\201D" "\2018" "\2019";
-  .transition(all .3s ease-in-out);
+  background-color : #f3e077;
+  position         : relative;
+  color            : #484019;
+  padding          : 40px 25px 30px 60px;
+  margin-bottom    : 20px;
   p {
     display : inline;
   }
-  &:hover {
-    border-left : 10px solid @brand-primary;
-    &::before {
-      color : @brand-primary;
-    }
-  }
   &::before {
-    color          : #ccc;
-    content        : open-quote;
-    font-size      : 4em;
-    line-height    : .1em;
-    margin-right   : .25em;
-    vertical-align : -.4em;
+    position              : absolute;
+    content               : 'Note :';
+    left                  : 0;
+    top                   : 0;
+    padding               : 3px 10px;
+    color                 : #fafafa;
+    font-size             : 15px;
+    background            : rgba(0, 0, 0, 0.2);
+    -webkit-border-radius : 1px 0 1px 0;
+    -moz-border-radius    : 1px 0 1px 0;
+    border-radius         : 1px 0 1px 0;
   }
 }
 
