upgrade the text field to MDT

--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/variables.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/variables.less
@@ -34,6 +34,7 @@
 
 @white-color: #fff;
 @light-color: #fafafa;
+@purple-color: #967adc;
 
 @format-status-color : #742e34;
 @format-aside-color: #5c4942;
