--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/mixins.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/mixins.less
@@ -1,10 +1,11 @@
 //////////////////// Mixin ////////////////////
 //
-@import "mixins/clearfix.less";
-@import "mixins/grid-icon.less";
-@import "mixins/sprites.less";
-@import "mixins/vendor-prefixes.less";
-@import "mixins/trangles.less";
+@import "mixins/clearfix";
+@import "mixins/grid-icon";
+@import "mixins/sprites";
+@import "mixins/vendor-prefixes";
+@import "mixins/trangles";
+@import "mixins/placeholder";
 
 .display(@var) {
   display : @var;
