--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/style.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/style.less
@@ -1,8 +1,3 @@
-
-
-
-
-
 .box-overlay {
   position         : fixed;
   top              : 0;
@@ -472,6 +467,9 @@
           padding        : 0 10px 0;
           position       : relative;
           margin-bottom  : 40px;
+          p {
+            display : none;
+          }
           @media only screen and (max-width : 479px) {
             width : auto;
           }
@@ -860,8 +858,6 @@
   padding : 0 10px;
 }
 
-
-
 footer {
   background-color : @white-color;
   margin           : 20px auto 0;
@@ -933,14 +929,18 @@ footer {
 }
 
 .ripple-effect {
-  position          : absolute;
+  background        : #000;
   border-radius     : 50%;
-  width             : 50px;
   height            : 50px;
-  background        : rgba(0, 0, 0, 0.16);
-  -webkit-animation : ripple-animation 2s;
-  -moz-animation    : ripple-animation 2s;
-  animation         : ripple-animation 2s;
-  z-index           : 1;
+  left              : 0;
+  opacity           : 0;
+  pointer-events    : none;
+  position          : absolute;
+  top               : 0;
+  -webkit-transform : translate(-50%, -50%);
+  -ms-transform     : translate(-50%, -50%);
+  transform         : translate(-50%, -50%);
+  width             : 50px;
+  overflow          : hidden;
 }
 
