--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
@@ -10,24 +10,26 @@ License: CC BY-NC-SA 4.0
 
 //////////////////// Setup ////////////////////
 //
-@import "reset/normalize.less";
-@import "mixins.less";
-@import "scaffold.less";
+@import "reset/normalize";
+@import "mixins";
+@import "scaffold";
 
 //////////////////// Component ////////////////////
 //
-@import "component/variables.less";
-@import "component/icons.less";
-@import "component/ribbon.less";
+@import "component/variables";
+@import "component/icons";
+@import "component/ribbon";
+@import "component/form";
+@import "component/button";
 
 //////////////////// Start ////////////////////
 //
-@import "module/header.less";
-@import "module/footer.less";
-@import "module/menu.less";
-@import "keyframes.less";
-@import "share.less";
-@import "content.less";
-@import "comment.less";
-@import "music.less";
-@import "style.less";
+@import "module/header";
+@import "module/footer";
+@import "module/menu";
+@import "keyframes";
+@import "share";
+@import "content";
+@import "comment";
+@import "music";
+@import "style";
