--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/scaffold.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/scaffold.less
@@ -39,13 +39,6 @@ svg {
   color      : @white-color;
 }
 
-input:focus,
-select:focus,
-textarea:focus,
-button:focus {
-  outline : none;
-}
-
 body {
   background  : none repeat scroll 0 0 #eee;
   color       : #333;
@@ -153,4 +146,29 @@ pre {
 button, html input[type="button"], input[type="reset"], input[type="submit"] {
   -webkit-appearance : button;
   cursor             : pointer;
+}
+
+.c-ripple {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: transparent;
+}
+
+.c-ripple__circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  width: 0;
+  height: 0;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, .25);
+  .c-ripple.is-active & {
+    animation: a-ripple .4s ease-in;
+  }
 }
