fixed the minor issue in comment style

--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/form.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/form.less
@@ -75,6 +75,7 @@ button:focus {
     &:extend(.rika-textfield input all);
     height : 50px;
     .transition(height .2s ease-in-out);
+    .placeholder({ font-size : 15px; color : rgba(0, 0, 0, .26); });
     &:focus,
     &:active {
       height : 150px;
