--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
@@ -21,6 +21,7 @@ License: CC BY-NC-SA 4.0
 @import "component/ribbon";
 @import "component/form";
 @import "component/button";
+@import "component/variables";
 
 //////////////////// Start ////////////////////
 //
